other/rec-req/require-pdb/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-pdb
policies:
- ../require-pdb.yaml
resources:
- resource-pass.yaml
- resource-skip.yaml
results:
- kind: Deployment
  policy: require-pdb
  resources:
  - nginx-deploy-pass
  result: pass
  rule: require-pdb
- kind: Deployment
  policy: require-pdb
  resources:
  - nginx-deploy-skip
  result: skip
  rule: require-pdb
variables: values.yaml
