other/rec-req/require-pdb/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: require-pdb
  rules:
  - name: require-pdb
    values:
      pdb_count: "1"
